--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ djangorestframework>=3.12,<4.0
 psycopg2-binary>=2.9,<3.0
 django-cors-headers>=3.10,<4.0
 python-decouple>=3.5,<4.0
+psycopg2
+numpy
+pandas
+scikit-learn
+tensorflow
